src/test/ui/nll/user-annotations/cast_static_lifetime.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/cast_static_lifetime.rs:6:19
   |
LL |     let y: &u32 = (&x) as &'static u32; //~ ERROR `x` does not live long enough
   |                   ^^^^----------------
   |                   |
   |                   borrowed value does not live long enough
   |                   type annotation requires that `x` is borrowed for `'static`
LL | }
   | - `x` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
